modified:   app-builder.ps1 	deleted:    build/FitCalculator.exe 	new file:   build/base.txt 	new file:   build/base2.txt 	new file:   build/kobus-pulse.exe 	modified:   build/list.txt 	deleted:    build/ping-o-check.exe 	new file:   builder.ps1 	modified:   config.json 	new file:   getver.ps1 	new file:   icons/aaa.ico 	new file:   icons/frequence_1.ico 	new file:   icons/lifeline.ico 	modified:   icons/ping.ico 	new file:   icons/ping2.ico

--- a/config.json
+++ b/config.json
@@ -1,10 +1,13 @@
 {
   "app": {
-    "name": "ping-o-check",
+    "name": "kobus-pulse",
     "icon": "ping.ico",
-    "version": "1.0.5",
     "desc": "Проверка доступности кобусов по ICMP",
     "license": "CYANIDE © 2025",
-    "company": "CYANIDE"
+    "company": "CYANIDE",
+    "main": "C:\\Users\\CYANIDE\\Desktop\\PROJECTS\\kobus-pulse-main\\main.go",
+    "versionFile": "C:\\Users\\CYANIDE\\Desktop\\PROJECTS\\kobus-pulse-main\\utils\\version.go",
+    "buildDir": "C:\\Users\\CYANIDE\\Desktop\\PROJECTS\\APP_BUILDER\\dist",
+    "version": "1.1.3"
   }
 }
